// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LikeTile — dark theme locked 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="See who likes you"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1E1B18",
        "borderColor": "#322D29",
        "borderRadius": 16,
        "borderWidth": 1,
        "flex": 1,
        "gap": 8,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#100E0C",
          "borderRadius": 999,
          "height": 64,
          "justifyContent": "center",
          "width": 64,
        }
      }
    >
      <ViewManagerAdapter_SymbolModule
        accessibilityElementsHidden={true}
        animated={false}
        colors={[]}
        importantForAccessibility="no"
        name="lock.fill"
        size={24}
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
        tint={4285822839}
        tintColor="#747777"
        type="monochrome"
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "#100E0C",
          "borderRadius": 4,
          "height": 12,
          "width": 84,
        }
      }
    />
  </View>
</RNCSafeAreaProvider>
`;

exports[`LikeTile — dark theme unlocked 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Maya, 27"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1E1B18",
        "borderColor": "#322D29",
        "borderRadius": 16,
        "borderWidth": 1,
        "flex": 1,
        "gap": 8,
        "paddingVertical": 16,
      }
    }
  >
    <View
      accessibilityLabel="Maya's avatar"
      accessibilityRole="image"
      accessible={true}
      style={
        [
          {
            "borderRadius": 999,
            "height": 64,
            "width": 64,
          },
          {
            "alignItems": "center",
            "backgroundColor": "#3A2419",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter-Medium",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#FF8560",
            },
            {
              "fontSize": 25.6,
              "lineHeight": 32,
            },
          ]
        }
      >
        M
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 13,
            "lineHeight": 18,
          },
          {
            "color": "#F5F2ED",
          },
          undefined,
        ]
      }
    >
      Maya, 27
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`LikeTile — dark theme unlocked with a note 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Maya, 27"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1E1B18",
        "borderColor": "#322D29",
        "borderRadius": 16,
        "borderWidth": 1,
        "flex": 1,
        "gap": 8,
        "paddingVertical": 16,
      }
    }
  >
    <View
      accessibilityLabel="Maya's avatar"
      accessibilityRole="image"
      accessible={true}
      style={
        [
          {
            "borderRadius": 999,
            "height": 64,
            "width": 64,
          },
          {
            "alignItems": "center",
            "backgroundColor": "#3A2419",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter-Medium",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#FF8560",
            },
            {
              "fontSize": 25.6,
              "lineHeight": 32,
            },
          ]
        }
      >
        M
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 13,
            "lineHeight": 18,
          },
          {
            "color": "#F5F2ED",
          },
          undefined,
        ]
      }
    >
      Maya, 27
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "lineHeight": 16,
          },
          {
            "color": "#A3A5A5",
          },
          undefined,
        ]
      }
    >
      Sent a note
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`LikeTile — light theme locked 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="See who likes you"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E6E2DD",
        "borderRadius": 16,
        "borderWidth": 1,
        "flex": 1,
        "gap": 8,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#F1EDEA",
          "borderRadius": 999,
          "height": 64,
          "justifyContent": "center",
          "width": 64,
        }
      }
    >
      <ViewManagerAdapter_SymbolModule
        accessibilityElementsHidden={true}
        animated={false}
        colors={[]}
        importantForAccessibility="no"
        name="lock.fill"
        size={24}
        style={
          {
            "height": 24,
            "width": 24,
          }
        }
        tint={4288322716}
        tintColor="#9A9C9C"
        type="monochrome"
      />
    </View>
    <View
      style={
        {
          "backgroundColor": "#F1EDEA",
          "borderRadius": 4,
          "height": 12,
          "width": 84,
        }
      }
    />
  </View>
</RNCSafeAreaProvider>
`;

exports[`LikeTile — light theme unlocked 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Maya, 27"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E6E2DD",
        "borderRadius": 16,
        "borderWidth": 1,
        "flex": 1,
        "gap": 8,
        "paddingVertical": 16,
      }
    }
  >
    <View
      accessibilityLabel="Maya's avatar"
      accessibilityRole="image"
      accessible={true}
      style={
        [
          {
            "borderRadius": 999,
            "height": 64,
            "width": 64,
          },
          {
            "alignItems": "center",
            "backgroundColor": "#FCE9E2",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter-Medium",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#F2724B",
            },
            {
              "fontSize": 25.6,
              "lineHeight": 32,
            },
          ]
        }
      >
        M
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 13,
            "lineHeight": 18,
          },
          {
            "color": "#1A1815",
          },
          undefined,
        ]
      }
    >
      Maya, 27
    </Text>
  </View>
</RNCSafeAreaProvider>
`;

exports[`LikeTile — light theme unlocked with a note 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    accessibilityLabel="Maya, 27"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E6E2DD",
        "borderRadius": 16,
        "borderWidth": 1,
        "flex": 1,
        "gap": 8,
        "paddingVertical": 16,
      }
    }
  >
    <View
      accessibilityLabel="Maya's avatar"
      accessibilityRole="image"
      accessible={true}
      style={
        [
          {
            "borderRadius": 999,
            "height": 64,
            "width": 64,
          },
          {
            "alignItems": "center",
            "backgroundColor": "#FCE9E2",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Inter-Medium",
              "fontSize": 13,
              "lineHeight": 18,
            },
            {
              "color": "#F2724B",
            },
            {
              "fontSize": 25.6,
              "lineHeight": 32,
            },
          ]
        }
      >
        M
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "Inter-Medium",
            "fontSize": 13,
            "lineHeight": 18,
          },
          {
            "color": "#1A1815",
          },
          undefined,
        ]
      }
    >
      Maya, 27
    </Text>
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "Inter-Regular",
            "fontSize": 12,
            "lineHeight": 16,
          },
          {
            "color": "#686B6B",
          },
          undefined,
        ]
      }
    >
      Sent a note
    </Text>
  </View>
</RNCSafeAreaProvider>
`;
